# summer-movie-wager-data

./: README.md  lists.csv  main.py  movies.csv  pyproject.toml  requirements.txt  test.py  thesummermoviewager.py  timetravelreviews.py  years.csv
.github/workflows/: merge.yml  test.yml
